--- a/src/app/admin/menu/menu.component.scss
+++ b/src/app/admin/menu/menu.component.scss
@@ -6,17 +6,17 @@ mat-expansion-panel,mat-sidenav{
   color: white;
 }
 mat-toolbar{
-  background-color: rgb(22, 57, 153);
+  background-color: #212121;
   color: white;
   display:   none;
 }
 mat-list-item{
-  background-color: rgb(52, 87, 183);
+  background-color: #343434;
   color: white;
   // text-decoration: aliceblue;
 }
 .subitem{
-  background-color: rgb(42, 77, 173);
+  background-color: #353535;
   // background-color: rgb(32, 57, 153);
   color: white;
 }
