--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -8,12 +8,12 @@ mat-toolbar{
   display:   none;
 }
 mat-list-item{
-  background-color: rgb(52, 87, 183);
+  background-color: #212121;
   color: white;
   // text-decoration: aliceblue;
 }
 .subitem{
-  background-color: rgb(42, 77, 173);
+  background-color: #212121;
   // background-color: rgb(32, 57, 153);
   color: white;
 }
