--- a/src/app/admin/categoria/categoria.component.html
+++ b/src/app/admin/categoria/categoria.component.html
@@ -48,10 +48,10 @@
                   <td>{{cat.titulo}}</td>
                   <td>{{cat.descripcion}}</td>
                   <td><div class="btn-group" role="group" >
-                    <button (click)="eliminar(cat.id)" class="btn btn-danger">
+                    <button (click)="eliminar(cat.id)" class="btn btn-danger btn-sm">
                       <mat-icon>delete</mat-icon>
                     </button>    
-                    <button type="button" class="btn btn-success" (click)="editar(cat)">
+                    <button type="button" class="btn btn-success btn-sm" (click)="editar(cat)">
 							        <mat-icon>edit</mat-icon>                      
                     </button>
                     </div>
