--- a/src/app/admin/colegio/colegio.component.html
+++ b/src/app/admin/colegio/colegio.component.html
@@ -5,7 +5,7 @@
   		<div class="col-lg-10 offset-1">
         <div class="btn-group" role="group" >
         <button type="button" class="btn btn-outline-primary"(click)="agregar()"><mat-icon>add</mat-icon>Nuevo Colegio</button>
-				<button type="button" class="btn btn-outline-danger" (click)="pdf()"><mat-icon>picture_as_pdf</mat-icon>Descargar PDF</button>
+				<!-- <button type="button" class="btn btn-outline-danger" (click)="pdf()"><mat-icon>picture_as_pdf</mat-icon>Descargar PDF</button> -->
 			</div>
     </div>
     </div>
