--- a/src/app/admin/concurso/concurso.component.html
+++ b/src/app/admin/concurso/concurso.component.html
@@ -5,7 +5,7 @@
   		<div class="col-lg-10 offset-1">
 			<div class="btn-group" role="group" aria-label="button group">
 			<button type="button" class="btn btn-outline-primary"(click)="agregar()" ><mat-icon>add</mat-icon>Nuevo Concurso</button>
-			<button type="button" class="btn btn-outline-danger"><mat-icon>picture_as_pdf</mat-icon> Descargar PDF</button>
+			<!-- <button type="button" class="btn btn-outline-danger"><mat-icon>picture_as_pdf</mat-icon> Descargar PDF</button> -->
 		</div>
 		</div>
 	</div>
