--- a/src/app/admin/importar/importar.component.html
+++ b/src/app/admin/importar/importar.component.html
@@ -23,18 +23,25 @@
     </div>
     <div class="col-sm-12 col-md-6 col-lg-8 col-xl-9">
       <div class="row" *ngIf="fequi" >
-        <ul *ngFor="let cat of id_categorias" > Categoria: {{cat.id}} , {{cat.titulo}}</ul  >
+        <div class="col-xl-12">
+          <ul *ngFor="let cat of id_categorias" > Categoria: 
+            <strong>{{cat.titulo}}</strong> => <strong>{{cat.id}}</strong>
+          </ul>
+        </div>
+        <br>
         <hr>
-        <form [formGroup]=listado>
-          <div class="custom-file">
-            <input type="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" class="custom-file-input" id="customFile" formControlName="file" lang="es" (change)="cargar($event)" #archivo hidden="true">
-            <input type="image" src="../../../assets/images/excel.png" width="100%" height="250px" alt="" (click)="archivo.click();cargar_excel()">
-          </div>
-          <div class="progress" *ngIf="lista!=null">
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <button mat-raised-button class="btn btn-outline-primary" (click)="enviar()" *ngIf="lista!=null" ><mat-icon>add</mat-icon> Subir Listado de Equipos</button>
-        </form>
+        <div class="col-xl-12">
+          <form [formGroup]=listado>
+            <div class="custom-file"> 
+              <input type="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" class="custom-file-input" id="customFile" formControlName="file" lang="es" (change)="cargar($event)" #archivo hidden="true">
+              <input type="image" src="../../../assets/images/excel.png" width="100%" height="250px" alt="" (click)="archivo.click();cargar_excel()">
+            </div>
+            <div class="progress" *ngIf="lista!=null">
+              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <button mat-raised-button class="btn btn-outline-primary" (click)="enviar()" *ngIf="lista!=null" ><mat-icon>add</mat-icon> Subir Listado de Equipos</button>
+          </form>
+        </div>
       </div>
 
       <hr *ngIf="fequi">
