--- a/src/app/admin/script/script.component.html
+++ b/src/app/admin/script/script.component.html
@@ -3,18 +3,12 @@
     <h4 style="text-align: center; font-size: 27px;">GENERAR CUENTA Y CLAVE</h4>
     <br>
     <div class="row" style="text-align: center;">
-      <!-- <div class="col-sm-12 col-md-6 col-lg-4" > 
-        <div class="list-group" >
-          <button type="button" class="list-group-item list-group-item-action active">CONCURSOS</button>
-          <button type="button" class="list-group-item list-group-item-action" *ngFor="let c of concursos" (click)="listar_concurso(c.id)" style="text-align: center;">{{c.titulo|uppercase}}</button>
-        </div>
-      </div> -->
       <div class="col-4">
         <mat-form-field appearance="fill">
           <mat-label>CONCURSOS</mat-label>
           <mat-select>
             <mat-option>Vacio</mat-option>
-            <mat-option *ngFor="let c of concursos" [value]="c.id" (click)="listar_concurso(c.id);">{{c.titulo|uppercase}}</mat-option>
+            <mat-option *ngFor="let c of concursos" [value]="c.id" (click)="listar_concurso(c);">{{c.titulo|uppercase}}</mat-option>
           </mat-select>
         </mat-form-field> 
       </div>
@@ -22,9 +16,9 @@
           <div class="btn-group" role="group" *ngIf="fboton">
             <a class="btn btn-outline-secondary" (click)="prueba()">Prueba</a>
             <a class="btn btn-outline-secondary" (click)="contest()">Competencia</a>
-            
             <div class="btn-group" role="group" *ngIf="fequipo>0">
               <a class="btn btn-outline-primary" (click)="generar()"><mat-icon>note_add</mat-icon> Asignar Cuenta y Clave</a>
+              <a class="btn btn-outline-success" (click)="guardar()" *ngIf="gg>0"><mat-icon>save</mat-icon>Guardar Cambios</a>
             </div>
           </div>
       </div>
@@ -55,9 +49,10 @@
                 <td>{{e.clave}}</td>
               </tr>
             </tbody>
-          </table>
-          <div class="offset-4">
-            <a class="btn btn-danger" (click)="script()"><mat-icon>cloud_download</mat-icon> Descargar Script BOCA</a>
+          </table>          
+              <div class="btn-group" role="group" style="text-align: center;">
+                <a class="btn-sm btn btn-outline-primary" (click)="script()"><mat-icon>cloud_download</mat-icon> Descargar Script BOCA</a>
+                <a class="btn-sm btn btn-outline-danger" (click)="pdf()"><mat-icon>picture_as_pdf</mat-icon> Descargar PDF</a>
           </div>
         </div>
       </div>  
