--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,7 +1,9 @@
 <br>
 <br>
 <br>
-<div class="col-6 offset-3 sm-col-12">
+<div class="row">
+  <div class="col-sm-12 col-md-2 col-lg-4 col-xl-4"></div>
+  <div class="col-sm-12 col-md-8 col-lg-4 col-xl-4">
   <div class="card border-dark">
     <div class="card-header border-dark" style="text-align: center; background-color:black;"><h3 style="color: white;">INICIAR SESION</h3></div>
     <div class="card-body">
@@ -92,3 +94,4 @@
       </div>
     </div>
   </div> -->
+</div>
