--- a/src/app/logistica/asignar/registrar-equipo/registrar-equipo.component.html
+++ b/src/app/logistica/asignar/registrar-equipo/registrar-equipo.component.html
@@ -24,6 +24,6 @@
     </div>
     <div mat-dialog-actions>
         <button mat-button (click)="cancelar()" class="btn btn-secondary">Cancelar</button>
-        <button mat-button [mat-dialog-close]="agregar" class="btn btn-primary" [disabled]="agregar.invalid">Agregar</button>
+        <button mat-button [mat-dialog-close]="agregar" class="btn btn-danger" [disabled]="agregar.invalid">Agregar</button>
     </div>
 </div>
