--- a/src/app/logistica/equipo/editar-equipo/editar-equipo.component.html
+++ b/src/app/logistica/equipo/editar-equipo/editar-equipo.component.html
@@ -34,6 +34,6 @@
     </div>
     <div mat-dialog-actions>
         <button mat-button (click)="cancelar()" class="btn btn-secondary">Cancelar</button>
-        <button mat-button [mat-dialog-close]="agregar" class="btn btn-primary" [disabled]="agregar.invalid">Actualizar</button>
+        <button mat-button [mat-dialog-close]="agregar" class="btn btn-danger" [disabled]="agregar.invalid">Actualizar</button>
     </div>
 </div>
