--- a/src/app/logistica/score/score.component.html
+++ b/src/app/logistica/score/score.component.html
@@ -57,9 +57,9 @@
         {{detalle[0].cuenta}}
       </td>
       <td *ngFor="let d of detalle[1]" style="text-align: center;font-size: 10px;">
-          <div  style="background-color:white; width: 90%; height: 40px;"  *ngIf="d.estado==0" (click)="copiar(d);abrirDialogo()">
+          <div  style="background-color:white; width: 90%; height: 40px; cursor: pointer;"  *ngIf="d.estado==0" (click)="copiar(d);abrirDialogo()">
           </div>             
-          <div [ngStyle]="{'background-color': d.color}" style="width: 80%; height: 30px; border-radius: 40%;  border: 1px solid #555; "*ngIf="d.estado>0" (click)="eliminar(d)">
+          <div [ngStyle]="{'background-color': d.color}" style="width: 80%; height: 30px; border-radius: 40%;  border: 1px solid #555; cursor: pointer;" *ngIf="d.estado>0" (click)="eliminar(d)">
           </div>         
             <p *ngIf="d.intento>0"style="margin-bottom: -10px;">
               {{d.intento}}/{{d.tiempo}}
